--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-nfc-manager": "^3.17.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "socket.io-client": "^4.8.1",
