fix: corrigir responsividade e configuracoes de build
- Adicionar SecureExitButton na GovernanceScreen (requer PIN de gerente)
- Corrigir scroll do CarrinhoScreen em telas pequenas
- Melhorar responsividade do CardapioScreen (botao adicionar e carrinho)
- Ajustar RoomGrid para telas pequenas (3 colunas em mobile)
- Adicionar scroll no KioskWelcomeScreen como fallback
- Remover header nativo da GovernanceScreen (apenas saÃ­da segura)
- Configurar Kotlin 1.9.25 via expo-build-properties e overrides
- Adicionar scripts de type-check no package.json
- Melhorar ScreenWrapper para suportar FlatList sem warnings

--- a/app.json
+++ b/app.json
@@ -34,7 +34,20 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-asset"
-    ]
+      "expo-asset",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "kotlinVersion": "1.9.25"
+          }
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "33077989-4875-4fe1-b0e9-8339431a8d8b"
+      }
+    }
   }
 }
