--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
+    "build:check": "npm run type-check"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -15,6 +18,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.23",
     "expo-asset": "~11.0.5",
+    "expo-build-properties": "~0.13.3",
     "expo-screen-orientation": "~8.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
@@ -31,6 +35,12 @@
     "@types/react": "~18.3.12",
     "sharp": "^0.34.5",
     "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "kotlin": "1.9.25"
+  },
+  "resolutions": {
+    "kotlin": "1.9.25"
   },
   "private": true
 }
